# Procedural-3D-Ray-Marching-Engine

./: .gitignore  CMakeLists.txt  README.md  glfwproject.sln  src.sln
Include/glad/glad/: glad.h
Include/irrklang/: ik_irrKlangTypes.h  ik_vec3d.h
Libraries/: glfw3.lib
Libraries/assimp/lib/: assimp-vc143-mtd.exp
Resources/configuration/: source_directory.h.in
glfwproject/: Shader.h  Source.cpp  Source.h  glad.c  glfwproject.vcxproj  glfwproject.vcxproj.filters  imgui.ini  rasterizerVertex.glsl  rayMarchingFragment.glsl  rmfragment.glsl  rtfragment.glsl
glfwproject/models/cylinder/: cylinder.mtl
glfwproject/models/egg/: egg.mtl
glfwproject/models/hart room/: HartRoom.mtl
src/: Source.cpp  Source.h  cameraMovement.h  glfwproject.vcxproj  input.h  maingui.h  rmfragment.glsl  rtfragment.glsl  sceneEditor.h  shadersetup.h
src/shaders/: rmfragment.glsl  rtfragment.glsl
